Fix spacing in titles in question index

--- a/app/assets/stylesheets/question_index.scss
+++ b/app/assets/stylesheets/question_index.scss
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    // justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -48,5 +48,9 @@
 }
 
 .QuestionInfo {
+    display: flex;
+    flex-direction: row;
+    // padding-right: 30px;
+    width: 80px;
     // background-color: yellowgreen;
 }
