--- a/app/assets/stylesheets/votes.scss
+++ b/app/assets/stylesheets/votes.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     // margin-left: 20px;
-    margin-right: 20px;
+    // margin-right: 20px;
     // background-color: yellow;
 }
 
